[package]
name = "planetary_sequencer_vst"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "ecfd632" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"